# medai-foundation-finetuning

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docker-build.yml  lint.yml  test.yml
configs/: eval.yaml  train.yaml
configs/model/: medsam_full_finetune.yaml  medsam_linear_probe.yaml  medsam_lora.yaml  unet_baseline.yaml
docker/: Dockerfile
docs/: index.md
notebooks/exploration/: 01_busi_eda.ipynb
scripts/: download_data.sh  run_experiments.sh
src/medai_medsam/: eval.py  train.py
src/medai_medsam/data/: __init__.py  dataset.py  transforms.py  utils.py
src/medai_medsam/explainability/: __init__.py  attention_viz.py
src/medai_medsam/losses/: __init__.py  dice_bce.py
src/medai_medsam/metrics/: __init__.py  segmentation.py
src/medai_medsam/models/: __init__.py  medsam_lora.py  prompt_utils.py  unet.py
tests/: conftest.py  test_data.py  test_losses.py  test_metrics.py  test_models.py
